[gd_scene load_steps=3 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ConnectionPanel" type="Panel" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -70.0
margin_top = -24.0
margin_right = 70.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/ConnectionPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -96.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ServerButton" type="Button" parent="CanvasLayer/ConnectionPanel/VBoxContainer"]
margin_right = 140.0
margin_bottom = 20.0
text = "Server"

[node name="ClientButton" type="Button" parent="CanvasLayer/ConnectionPanel/VBoxContainer"]
margin_top = 24.0
margin_right = 140.0
margin_bottom = 44.0
text = "Client"

[node name="ServerPlayer" parent="." instance=ExtResource( 2 )]
position = Vector2( 230, 367 )

[node name="ClientPlayer" parent="." instance=ExtResource( 2 )]
position = Vector2( 230, 367 )

[connection signal="pressed" from="CanvasLayer/ConnectionPanel/VBoxContainer/ServerButton" to="." method="_on_ServerButton_pressed"]
[connection signal="pressed" from="CanvasLayer/ConnectionPanel/VBoxContainer/ClientButton" to="." method="_on_ClientButton_pressed"]
